# time-admin

./: README.md  meson.build
data/: meson.build  time-admin.desktop.in
data/hicolor/: meson.build
data/icon/: meson.build
data/map/: meson.build
po/: POTFILES.in  time-admin.pot  zh_CN.mo  zh_CN.po
po-timezones/: meson.build
src/: main.c  meson.build  time-map.c  time-share.c  time-share.h  time-tool.c  time-tool.h  time-zone.c  time-zone.h
